--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <p>Nunc enim urna, tristique vel molestie vitae, blandit quis orci. In tellus tellus, pulvinar eget tristique sit amet, rhoncus vel lectus. Phasellus ipsum magna, tempus non nulla vel, vehicula fringilla tortor. Quisque ut gravida nisl. Aenean feugiat quis.</p>
         <hr>
         <div class="footer">
+            <a href="https://www.medium.com/" class="social-icon" target="_blank">
+                <i class="fab fa-medium"></i>
+            </a>
             <a href="https://www.instagram.com/ltzvrd" class="social-icon" target="_blank">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.github.com/" class="social-icon" target="_blank">
+            <a href="https://www.github.com/zavrud" class="social-icon" target="_blank">
                 <i class="fab fa-github"></i>
             </a>
             <a href="https://www.linkedin.com/in/bddrmwn" class="social-icon" target="_blank">
