--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="https://www.linkedin.com/in/bddrmwn" class="social-icon" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
-            <a href="https://www.medium.com/" class="social-icon" target="_blank">
+            <a href="https://medium.com/@darmawann" class="social-icon" target="_blank">
                 <i class="fab fa-medium"></i>
             </a>
         </div>
