--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Budi Darmawan</title>
+    <title>zavrud</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/worker.png" type="image/png">
     <link rel="stylesheet" href="style.css">
@@ -9,13 +9,51 @@
 <body>
     <div class="container">
         <hr>
-        <h1>Budi Darmawan - Forever Learner</h1>
+        <h1>BUDI DARMAWAN - DIGITAL FORENSICS</h1>
         <img src="img/pp.jpg" alt="image-self" class="image">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultrices dui vel sapien bibendum tempus. Nullam ac imperdiet ante. Sed ac egestas neque. Aenean cursus, augue a bibendum iaculis, dolor enim blandit eros, vitae malesuada nisl libero a sem. Duis metus sapien, porttitor vel tortor et, blandit aliquet lacus. Maecenas maximus sit amet tortor et faucibus. Nullam condimentum diam eget erat congue pellentesque. Nunc tempor mauris quis fringilla elementum. Vestibulum vehicula sagittis interdum. Curabitur eleifend massa elit, a pellentesque risus convallis vitae. Proin nisl nibh, ornare egestas libero eget, vestibulum venenatis urna. Integer blandit volutpat felis non ultrices. Maecenas luctus enim quis nibh lacinia tincidunt. Maecenas commodo, urna et mattis tempus, nunc tortor pellentesque ipsum, at fermentum tortor sem nec lorem.</p>
-        <p>Nam ut egestas est. Maecenas egestas convallis dapibus. Nunc et mauris eget dolor tristique facilisis consequat eget enim. Phasellus in dolor eros. Donec molestie dapibus sapien quis varius. Duis at volutpat odio. Aliquam egestas scelerisque iaculis. Etiam semper rutrum sapien nec efficitur. Nunc quis auctor ligula. Nam aliquam fermentum est, vitae ultrices ipsum fermentum laoreet. Mauris pharetra mauris sapien, nec gravida erat volutpat a. Morbi congue sollicitudin ex eu imperdiet. Nunc sagittis ac nibh nec bibendum. Sed suscipit quam risus, eget auctor quam rutrum eu. Donec ligula nunc, fermentum eu congue vel, faucibus a orci.</p>
-        <p>Suspendisse ac orci tellus. Nam ornare, sapien ut dictum aliquet, nisi orci consectetur purus, in tempor risus mi vel nibh. Nam sed diam elementum, malesuada felis et, sagittis lectus. Praesent sollicitudin elementum turpis, vitae mollis neque sagittis sed. Aenean accumsan, odio ac malesuada vehicula, ex leo finibus enim, a hendrerit orci sapien finibus elit. Vivamus tellus ipsum, semper nec felis vitae, ornare eleifend massa. Aenean imperdiet, eros sed condimentum faucibus, urna libero rhoncus urna, at facilisis nisi ligula et erat. Nulla mollis in enim quis convallis.</p>
-        <p>Donec vitae aliquet lectus, eu aliquet arcu. Etiam ultricies, ex vel semper sagittis, odio enim lacinia neque, et placerat diam libero non diam. Suspendisse bibendum vulputate enim, sed iaculis erat aliquam dictum. Mauris id lectus diam. Sed imperdiet sapien in tellus sodales egestas. Nulla commodo semper augue, feugiat vulputate diam pretium ut. Donec eu placerat ante, in mattis neque. Sed purus velit, dignissim eget dui sed, egestas semper sem.</p>
-        <p>Nunc enim urna, tristique vel molestie vitae, blandit quis orci. In tellus tellus, pulvinar eget tristique sit amet, rhoncus vel lectus. Phasellus ipsum magna, tempus non nulla vel, vehicula fringilla tortor. Quisque ut gravida nisl. Aenean feugiat quis.</p>
+         <p>
+        An individual with a deep interest in the world of cybersecurity,
+        particularly in the field of digital forensics. This interest is not
+        merely a passing fancy, but a commitment to delve into the intricacies
+        of cybercrime, which is increasingly complex and sophisticated in
+        today's digital age. I realize that behind the ease and connectivity
+        offered by technology, there also lie potential threats that can harm
+        individuals, organizations, and even nations. Therefore, I am determined
+        to equip myself with adequate knowledge and skills in the field of
+        cybersecurity, with a primary focus on digital forensics.
+      </p>
+      <p>
+        A wise proverb says that a life without knowledge is mere ignorance, and
+        I fully agree with this statement. Knowledge is the foundation of human
+        civilization. Without knowledge, we would have difficulty understanding
+        the world around us, solving problems, and making the right decisions.
+        Knowledge gives us the power to innovate, create new solutions, and
+        improve the quality of life. More than just information, knowledge
+        shapes our way of thinking, sharpens our analysis, and broadens our
+        horizons. It opens doors to a deeper understanding of ourselves, others,
+        and the world. Imagine a society without knowledge; it would be
+        stagnant, backward, and vulnerable to various problems.
+      </p>
+      <p>
+        I believe that hard work and consistency are the keys to all excellence.
+        No success is achieved instantly. Every achievement, whether small or
+        large, requires persistent and continuous effort. Hard work is not just
+        about performing activities physically, but also involves a strong
+        mental attitude, focus, and discipline. Consistency, on the other hand,
+        is about doing something continuously and regularly, even when facing
+        challenges or difficulties. The combination of hard work and consistency
+        creates a strong momentum to achieve goals.
+      </p>
+      <p>
+        I would like to emphasize that the most important key to all desires and
+        success is to start everything now. Often, we get caught up in
+        procrastination, looking for the right time, or waiting for ideal
+        conditions. In fact, the most appropriate time is now, and ideal
+        conditions are created through action. It is never too late to start
+        something positive. Every second we delay is a lost opportunity to
+        learn, grow, and achieve goals. The biggest regret is not failure, but
+        the opportunities that were never taken.
+      </p>
         <hr>
         <div class="footer">
             <a href="https://www.github.com/zavrud" class="social-icon" target="_blank">
