--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <html>
-<head>
-    <title>zavrud</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/worker.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
+  <head>
+    <title>Personal About</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/worker.png" type="image/png" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="container">
-        <hr>
-        <h1>BUDI DARMAWAN - DIGITAL FORENSICS</h1>
-        <img src="img/pp.jpg" alt="image-self" class="image">
-         <p>
-        An individual with a deep interest in the world of cybersecurity,
-        particularly in the field of digital forensics. This interest is not
-        merely a passing fancy, but a commitment to delve into the intricacies
-        of cybercrime, which is increasingly complex and sophisticated in
-        today's digital age. I realize that behind the ease and connectivity
-        offered by technology, there also lie potential threats that can harm
-        individuals, organizations, and even nations. Therefore, I am determined
-        to equip myself with adequate knowledge and skills in the field of
-        cybersecurity, with a primary focus on digital forensics.
+      <hr />
+      <h1>BUDI DARMAWAN - <strong>Forever Life Learner</strong></h1>
+      <img src="img/pp.jpg" alt="image-self" class="image" />
+      <p>
+        Life is a grand adventure, and I am eager to explore all it has to
+        offer. I yearn for experiences that will challenge and inspire me, and I
+        believe that true happiness lies in the pursuit of meaning. Through
+        continuous learning and personal growth, I hope to discover my life's
+        purpose and live a life filled with fulfillment.
       </p>
       <p>
         A wise proverb says that a life without knowledge is mere ignorance, and
@@ -54,18 +53,30 @@
         learn, grow, and achieve goals. The biggest regret is not failure, but
         the opportunities that were never taken.
       </p>
-        <hr>
-        <div class="footer">
-            <a href="https://www.github.com/zavrud" class="social-icon" target="_blank">
-                <i class="fab fa-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/bddrmwn" class="social-icon" target="_blank">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="https://medium.com/@darmawann" class="social-icon" target="_blank">
-                <i class="fab fa-medium"></i>
-            </a>
-        </div>
+      <hr />
+      <div class="footer">
+        <a
+          href="https://www.github.com/zavrud"
+          class="social-icon"
+          target="_blank"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/bddrmwn"
+          class="social-icon"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.medium.com/@darmawann"
+          class="social-icon"
+          target="_blank"
+        >
+          <i class="fab fa-medium"></i>
+        </a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
