--- a/index.html
+++ b/index.html
@@ -63,18 +63,19 @@
           <i class="fab fa-github"></i>
         </a>
         <a
+          href="https://www.instagram.com/@darmawan.space"
+          class="social-icon"
+          target="_blank"
+        >
+          <i class="fab fa-instagram"></i>
+        <a
           href="https://www.linkedin.com/in/bddrmwn"
           class="social-icon"
           target="_blank"
         >
           <i class="fab fa-linkedin"></i>
         </a>
-        <a
-          href="https://www.medium.com/@darmawann"
-          class="social-icon"
-          target="_blank"
-        >
-          <i class="fab fa-medium"></i>
+        
         </a>
       </div>
     </div>
