--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instagram.com/@darmawan.space"
+          href="https://www.instagram.com/darmawan.space/
           class="social-icon"
           target="_blank"
         >
