--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="container">
       <hr />
-      <h1>BUDI DARMAWAN - <strong>Forever Life Learner</strong></h1>
-      <img src="img/pp.jpg" alt="image-self" class="image" />
+      <h1>Budi Darmawan - <strong>Backend Developer</strong></h1>
+      <img src="img/pp.jpeg" alt="image-self" class="image" />
       <p>
         Life is a grand adventure, and I am eager to explore all it has to
         offer. I yearn for experiences that will challenge and inspire me, and I
@@ -56,6 +56,13 @@
       <hr />
       <div class="footer">
         <a
+          href="https://www.instagram.com/darmawan.space/"
+          class="social-icon"
+          target="_blank"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
           href="https://www.github.com/zavrud"
           class="social-icon"
           target="_blank"
@@ -63,19 +70,11 @@
           <i class="fab fa-github"></i>
         </a>
         <a
-          href="https://www.instagram.com/darmawan.space/"
-          class="social-icon"
-          target="_blank"
-        >
-          <i class="fab fa-instagram"></i>
-        <a
           href="https://www.linkedin.com/in/bddrmwn"
           class="social-icon"
           target="_blank"
         >
           <i class="fab fa-linkedin"></i>
-        </a>
-        
         </a>
       </div>
     </div>
