--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <hr />
-      <h1>Budi Darmawan - <strong>Backend Developer</strong></h1>
+      <h1>Budi Darmawan - <strong>SmartContract Developer</strong></h1>
       <img src="img/pp.jpeg" alt="image-self" class="image" />
       <p>
         Life is a grand adventure, and I am eager to explore all it has to
@@ -56,7 +56,7 @@
       <hr />
       <div class="footer">
         <a
-          href="https://www.instagram.com/darmawan.space/"
+          href="https://www.instagram.com/zavrud/"
           class="social-icon"
           target="_blank"
         >
