--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <hr />
-      <h1>Budi Darmawan - <strong>SmartContract Developer</strong></h1>
+      <h1>Budi Darmawan - <strong>web3 developer</strong></h1>
       <img src="img/pp.jpeg" alt="image-self" class="image" />
       <p>
         Life is a grand adventure, and I am eager to explore all it has to
