--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
       <hr />
-      <h1>Budi Darmawan - <strong>Learning of the Life</strong></h1>
+      <h1><a href="https://www.linkedin.com/in/bddrmwn" target="_blank"> Budi Darmawan </a>- <strong>Fortis Fortuna Adiuvat</strong></h1>
       <img src="img/pp.jpeg" alt="image-self" class="image" />
       <p>
         Life is a grand adventure, and I am eager to explore all it has to
@@ -54,28 +54,6 @@
         the opportunities that were never taken.
       </p>
       <hr />
-      <div class="footer">
-        <a
-          href="https://www.instagram.com/zavrud/"
-          class="social-icon"
-          target="_blank"
-        >
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a
-          href="https://www.github.com/zavrud"
-          class="social-icon"
-          target="_blank"
-        >
-          <i class="fab fa-github"></i>
-        </a>
-        <a
-          href="https://www.linkedin.com/in/bddrmwn"
-          class="social-icon"
-          target="_blank"
-        >
-          <i class="fab fa-linkedin"></i>
-        </a>
       </div>
     </div>
   </body>
